--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ table tr td {
 a.md-button.md-primary.md-raised, a.md-button.md-primary.md-fab, .md-button.md-primary.md-raised, .md-button.md-primary.md-fab, a.md-button.md-primary.md-raised:not([disabled]):hover, a.md-button.md-primary.md-fab:not([disabled]):hover, .md-button.md-primary.md-raised:not([disabled]):hover, .md-button.md-primary.md-fab:not([disabled]):hover {
   background-color: #FFD200;
   color: #616161;
+  cursor: pointer;
 }
 
 .showDataStory {
