--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ a.md-button.md-primary.md-raised, a.md-button.md-primary.md-fab, .md-button.md-p
 
 .showDataStory {
   background-color: red;
-  width: 100%;
-  height: 100%;
+  /*width: 100%;
+  height: 100%;*/
 }
 
 #step2Container {
