--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ table tr td {
   width: 20%;
 }
 
-a.md-button.md-primary.md-raised, a.md-button.md-primary.md-fab, .md-button.md-primary.md-raised, .md-button.md-primary.md-fab, a.md-button.md-primary.md-raised:not([disabled]):hover, a.md-button.md-primary.md-fab:not([disabled]):hover, .md-button.md-primary.md-raised:not([disabled]):hover, .md-button.md-primary.md-fab:not([disabled]):hover {
+a.md-button.md-primary.md-raised.orangeBtn, a.md-button.md-primary.md-fab.orangeBtn, .md-button.md-primary.md-raised.orangeBtn, .md-button.md-primary.md-fab.orangeBtn, a.md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover {
   background-color: #FFD200;
   color: #616161;
   cursor: pointer;
