--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,18 @@ a.md-button.md-primary.md-raised.orangeBtn, a.md-button.md-primary.md-fab.orange
   cursor: pointer;
 }
 
+a.md-button.md-primary.md-raised.greenBtn, a.md-button.md-primary.md-fab.greenBtn, .md-button.md-primary.md-raised.greenBtn, .md-button.md-primary.md-fab.greenBtn, a.md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.greenBtn:not([disabled]):hover, .md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, .md-button.md-primary.md-fab.greenBtn:not([disabled]):hover {
+  background-color: #26BF59;
+  color: #FFF;
+  cursor: pointer;
+}
+
+a.md-button.md-primary.md-raised.blueBtn, a.md-button.md-primary.md-fab.blueBtn, .md-button.md-primary.md-raised.blueBtn, .md-button.md-primary.md-fab.blueBtn, a.md-button.md-primary.md-raised.blueBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.blueBtn:not([disabled]):hover, .md-button.md-primary.md-raised.blueBtn:not([disabled]):hover, .md-button.md-primary.md-fab.blueBtn:not([disabled]):hover {
+  background-color: #00B4C8;
+  color: #FFF;
+  cursor: pointer;
+}
+
 .showDataStory {
   background-color: red;
   /*width: 100%;
