--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,18 @@ table tr td {
   width: 20%;
 }
 
-a.md-button.md-primary.md-raised.orangeBtn, a.md-button.md-primary.md-fab.orangeBtn, .md-button.md-primary.md-raised.orangeBtn, .md-button.md-primary.md-fab.orangeBtn, a.md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover {
+a.md-button.orangeBtn {
   background-color: #FFD200;
   color: #616161;
   cursor: pointer;
 }
 
+/*a.md-button.md-primary.md-raised.orangeBtn, a.md-button.md-primary.md-fab.orangeBtn, .md-button.md-primary.md-raised.orangeBtn, .md-button.md-primary.md-fab.orangeBtn, a.md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover {
+  background-color: #FFD200;
+  color: #616161;
+  cursor: pointer;
+}
+*/
 a.md-button.md-primary.md-raised.greenBtn, a.md-button.md-primary.md-fab.greenBtn, .md-button.md-primary.md-raised.greenBtn, .md-button.md-primary.md-fab.greenBtn, a.md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.greenBtn:not([disabled]):hover, .md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, .md-button.md-primary.md-fab.greenBtn:not([disabled]):hover {
   background-color: #26BF59;
   color: #FFF;
