--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ table tr td {
   width: 20%;
 }
 
-button.md-raised.md-primary.right.orangeBtn.md-button.md-default-theme, button#btnNewStory {
+button#btnNewStory, button#btnShowStory {
   background-color: #FFD200;
   color: #616161;
   cursor: pointer;
