--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a.md-button.md-primary.md-raised.blueBtn, a.md-button.md-primary.md-fab.blueBtn,
   height: 100%;*/
 }
 
-#step2Container {
+#step1Container, #step2Container {
   display: none;
 }
 
