--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,24 @@ button#btnNewStory, button#btnShowStory {
   cursor: pointer;
 }
 
+button#btnOpenPDF, button#btnSavePDF {
+  background-color: #FFD200;
+  color: #616161;
+  cursor: pointer;
+}
+
+button#addRequirement {
+  background-color: #FFD200;
+  color: #616161;
+  cursor: pointer;
+}
 /*a.md-button.md-primary.md-raised.orangeBtn, a.md-button.md-primary.md-fab.orangeBtn, .md-button.md-primary.md-raised.orangeBtn, .md-button.md-primary.md-fab.orangeBtn, a.md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-raised.orangeBtn:not([disabled]):hover, .md-button.md-primary.md-fab.orangeBtn:not([disabled]):hover {
   background-color: #FFD200;
   color: #616161;
   cursor: pointer;
 }
 */
-a.md-button.md-primary.md-raised.greenBtn, a.md-button.md-primary.md-fab.greenBtn, .md-button.md-primary.md-raised.greenBtn, .md-button.md-primary.md-fab.greenBtn, a.md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.greenBtn:not([disabled]):hover, .md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, .md-button.md-primary.md-fab.greenBtn:not([disabled]):hover {
+/*a.md-button.md-primary.md-raised.greenBtn, a.md-button.md-primary.md-fab.greenBtn, .md-button.md-primary.md-raised.greenBtn, .md-button.md-primary.md-fab.greenBtn, a.md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, a.md-button.md-primary.md-fab.greenBtn:not([disabled]):hover, .md-button.md-primary.md-raised.greenBtn:not([disabled]):hover, .md-button.md-primary.md-fab.greenBtn:not([disabled]):hover {
   background-color: #26BF59;
   color: #FFF;
   cursor: pointer;
@@ -59,7 +70,7 @@ a.md-button.md-primary.md-raised.blueBtn, a.md-button.md-primary.md-fab.blueBtn,
   background-color: #00B4C8;
   color: #FFF;
   cursor: pointer;
-}
+}*/
 
 .showDataStory {
   background-color: red;
