--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ button#addRequirement {
   width: 360px;
 }
 
-#step1Container, #step2Container {
+#step1Container, #step2Container, # {
   display: none;
 }
 
@@ -90,7 +90,7 @@ button#addRequirement {
   display: none;
 }
 
-#storyNumber {
+#storyNumber, #sprintNumber {
   border: 0;
   background-color: #E0E0E0;
   color: #616161;
