--- a/css/style.css
+++ b/css/style.css
@@ -80,10 +80,9 @@ button#addRequirement {
 }
 
 #sprintDiv {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  position: relative;
+  margin-left: 25px;
+  margin-top: 50px;
 }
 
  #subdomain {
