--- a/css/style.css
+++ b/css/style.css
@@ -80,9 +80,9 @@ button#addRequirement {
 }
 
 #sprintDiv {
-  position: relative;
-  margin-left: 25px;
-  margin-top: 50px;
+  position: absolute;
+  left: 25px;
+  top: 210px;
 }
 
  #subdomain {
