--- a/css/style.css
+++ b/css/style.css
@@ -80,10 +80,11 @@ button#addRequirement {
 }
 
 #sprintDiv {
-  border-top: 2px solid #616161;
+  border-top: 1px solid #FFD200;
   position: absolute;
   left: 25px;
-  top: 210px;
+  top: 180px;
+  padding-top: 30px;
 }
 
  #subdomain {
