--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
- * {
+/*
+ littlebit of styling for the webpage
+*/
+
+* {
   margin: 0;
   padding: 0;
   font-family: Roboto, Verdana;
-
 }
 
 body, html {
@@ -52,8 +55,6 @@ button#btnOpenPDF, button#btnSavePDF, button#btnPrintPDF, button#btnPrintPDFSpri
 
 .showDataStory {
   background-color: red;
-  /*width: 100%;
-  height: 100%;*/
 }
 
 #addRequirementValue {
