--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ table tr td {
   bottom: 0;
 }
 
+.layout-align-space-around, .layout-align-space-around-center, .layout-align-space-around-end, .layout-align-space-around-start {
+    z-index: 0;
+    position: absolute;
+    bottom: 0;
+}
+
 .right {
   float: right;
 }
