--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,15 @@ table tr td {
 }
 
 
+
+md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle, md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
+  border-color: #000000;
+}
+
+
+
+
+
 .overlap {
   z-index: 9999999999999999999999999;
 }
