--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,27 @@ table tr td {
 }
 
 
+md-progress-circular .md-inner .md-gap {
+  border-top-color: #000000;
+  border-bottom-color: #000000;
 
-md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle, md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
-  border-color: #000000;
 }
 
+md-progress-circular .md-inner .md-left .md-half-circle {
+  border-left-color: #000000;
+}
 
+md-progress-circular .md-inner .md-left .md-half-circle {
+  border-top-color: #000000;
+}
+
+md-progress-circular .md-inner .md-right .md-half-circle {
+  border-right-color: #000000;
+}
+
+md-progress-circular .md-inner .md-right .md-half-circle {
+  border-top-color: #000000;
+}
 
 
 
