--- a/css/style.css
+++ b/css/style.css
@@ -28,25 +28,25 @@ table tr td {
 
 
 md-progress-circular .md-inner .md-gap {
-  border-top-color: #000000;
-  border-bottom-color: #000000;
+  border-top-color: #00B4C8;
+  border-bottom-color: #00B4C8;
 
 }
 
 md-progress-circular .md-inner .md-left .md-half-circle {
-  border-left-color: #000000;
+  border-left-color: #00B4C8;
 }
 
 md-progress-circular .md-inner .md-left .md-half-circle {
-  border-top-color: #000000;
+  border-top-color: #00B4C8;
 }
 
 md-progress-circular .md-inner .md-right .md-half-circle {
-  border-right-color: #000000;
+  border-right-color: #00B4C8;
 }
 
 md-progress-circular .md-inner .md-right .md-half-circle {
-  border-top-color: #000000;
+  border-top-color: #00B4C8;
 }
 
 
