--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -6,6 +6,7 @@
 	position: relative;
 }
 
+/* row 1 */
 .PDFCard #PDFCard1 {
 	position: absolute;
 	width: calc(100% / 20 * 3);
@@ -13,6 +14,7 @@
 	left: 0;
 	top: 0;
 	background-color: red;
+	height: 100px;
 }
 
 .PDFCard #PDFCard2 {
@@ -22,6 +24,7 @@
 	left: calc(100% / 20 * 3);
 	top: 0;
 	background-color: blue;
+	height: 100px;
 }
 
 .PDFCard #PDFCard3 {
@@ -31,36 +34,47 @@
 	left: calc(100% / 20 * 17);
 	top: 0;
 	background-color: green;
+	height: 150px;
 }
 
-/*#4 {
-	
+/* row 2 */
+.PDFCard #PDFCard4 {
+	position: absolute;
+	width: calc(100% / 20 * 11);
+	height: auto;
+	left: 0;
+	top: 100px;
+	background-color: black;
+	height: 50px;
 }
 
-#5 {
-	
+.PDFCard #PDFCard5 {
+	position: absolute;
+	width: calc(100% / 20 * 2);
+	height: auto;
+	left: calc(100% / 20 * 11);
+	top: 100px;
+	background-color: orange;
+	height: 50px;
 }
 
-#6 {
-	
+.PDFCard #PDFCard6{
+	position: absolute;
+	width: calc(100% / 20 * 2);
+	height: auto;
+	left: calc(100% / 20 * 13);
+	top: 100px;
+	background-color: purple;
+	height: 50px;
 }
 
-#7 {
-	
+.PDFCard #PDFCard7 {
+	position: absolute;
+	width: calc(100% / 20 * 2);
+	height: auto;
+	left: calc(100% / 20 * 15);
+	top: 100px;
+	background-color: brown;
+	height: 50px;
 }
 
-#8 {
-	
-}
-
-#9 {
-	
-}
-
-#10 {
-	
-}
-
-#11 {
-	
-}*/
