--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -2,8 +2,9 @@
 .PDFCard {
 	width: 100%;
 	height: auto;
-	background-color: yellow;
+	/*background-color: yellow;*/
 	position: relative;
+	padding: 15px;
 }
 
 /* row 1 */
