--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -1,10 +1,10 @@
 /* md card, PDFCard layout */
 .PDFCard {
 	width: 100%;
-	height: auto;
-	/*background-color: yellow;*/
+	height: 150px;
 	position: relative;
 	padding: 15px;
+	box-shadow: 0 3px 1px -2px rgba(0,0,0,.14),0 2px 2px 0 rgba(0,0,0,.098),0 1px 5px 0 rgba(0,0,0,.084);
 }
 
 /* row 1 */
