--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -97,7 +97,7 @@
 	width: calc(100% / 20 * 14);
 	left: 0;
 	top: 350px;
-	background-color: dark blue;
+	background-color: green;
 	height: 350px;
 }
 
