--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -8,7 +8,7 @@
 }
 
 /* row 1 */
-.PDFCard #PDFCard1 {
+.PDFCard #ticket-id {
 	position: absolute;
 	width: calc(100% / 20 * 3);
 	left: 0;
@@ -17,7 +17,7 @@
 	height: 100px;
 }
 
-.PDFCard #PDFCard2 {
+.PDFCard #title {
 	position: absolute;
 	width: calc(100% / 20 * 14);
 	left: calc(100% / 20 * 3);
@@ -36,7 +36,7 @@
 }
 
 /* row 2 */
-.PDFCard #PDFCard4 {
+.PDFCard #epic {
 	position: absolute;
 	width: calc(100% / 20 * 11);
 	left: 0;
@@ -45,7 +45,7 @@
 	height: 50px;
 }
 
-.PDFCard #PDFCard5 {
+.PDFCard #groom {
 	position: absolute;
 	width: calc(100% / 20 * 2);
 	left: calc(100% / 20 * 11);
@@ -73,7 +73,7 @@
 }
 
 /* row 3 */
-.PDFCard #PDFCard8 {
+.PDFCard #story {
 	position: absolute;
 	width: calc(100% / 20 * 14);
 	left: 0;
