--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -13,7 +13,7 @@
 	width: calc(100% / 20 * 3);
 	left: 0;
 	top: 0;
-	background-color: red;
+	/*background-color: red;*/
 	height: 100px;
 }
 
@@ -22,7 +22,7 @@
 	width: calc(100% / 20 * 14);
 	left: calc(100% / 20 * 3);
 	top: 0;
-	background-color: blue;
+	/*background-color: blue;*/
 	height: 100px;
 }
 
@@ -31,7 +31,7 @@
 	width: calc(100% / 20 * 3);
 	left: calc(100% / 20 * 17);
 	top: 0;
-	background-color: green;
+	/*background-color: green;*/
 	height: 150px;
 }
 
@@ -41,7 +41,7 @@
 	width: calc(100% / 20 * 11);
 	left: 0;
 	top: 100px;
-	background-color: black;
+	/*background-color: black;*/
 	height: 50px;
 }
 
@@ -50,7 +50,7 @@
 	width: calc(100% / 20 * 2);
 	left: calc(100% / 20 * 11);
 	top: 100px;
-	background-color: orange;
+	/*background-color: orange;*/
 	height: 50px;
 }
 
@@ -59,7 +59,7 @@
 	width: calc(100% / 20 * 2);
 	left: calc(100% / 20 * 13);
 	top: 100px;
-	background-color: purple;
+	/*background-color: purple;*/
 	height: 50px;
 }
 
@@ -68,7 +68,7 @@
 	width: calc(100% / 20 * 2);
 	left: calc(100% / 20 * 15);
 	top: 100px;
-	background-color: brown;
+	/*background-color: brown;*/
 	height: 50px;
 }
 
@@ -78,7 +78,7 @@
 	width: calc(100% / 20 * 14);
 	left: 0;
 	top: 150px;
-	background-color: pink;
+	/*background-color: pink;*/
 	height: 200px;
 }
 
@@ -87,7 +87,7 @@
 	width: calc(100% / 20 * 6);
 	left: calc(100% / 20 * 14);
 	top: 150px;
-	background-color: aqua;
+	/*background-color: aqua;*/
 	height: 200px;
 }
 
@@ -97,7 +97,7 @@
 	width: calc(100% / 20 * 14);
 	left: 0;
 	top: 350px;
-	background-color: green;
+	/*background-color: green;*/
 	height: 350px;
 }
 
@@ -106,6 +106,6 @@
 	width: calc(100% / 20 * 6);
 	left: calc(100% / 20 * 14);
 	top: 350px;
-	background-color: yellow;
+	/*background-color: yellow;*/
 	height: 350px;
 }
