--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -1,7 +1,7 @@
 /* md card, PDFCard layout */
 .PDFCard {
 	width: 100%;
-	height: 150px;
+	height: 700px;
 	position: relative;
 	padding: 15px;
 	box-shadow: 0 3px 1px -2px rgba(0,0,0,.14),0 2px 2px 0 rgba(0,0,0,.098),0 1px 5px 0 rgba(0,0,0,.084);
@@ -24,6 +24,7 @@
 	top: 0;
 	/*background-color: blue;*/
 	height: 100px;
+	border: 1px solid #444;
 }
 
 .PDFCard #PDFCard3 {
