--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -15,6 +15,7 @@
 	top: 0;
 	/*background-color: red;*/
 	height: 100px;
+	border: 1px solid #444;
 }
 
 .PDFCard #title {
@@ -34,6 +35,7 @@
 	top: 0;
 	/*background-color: green;*/
 	height: 150px;
+	border: 1px solid #444;
 }
 
 /* row 2 */
@@ -44,6 +46,7 @@
 	top: 100px;
 	/*background-color: black;*/
 	height: 50px;
+	border: 1px solid #444;
 }
 
 .PDFCard #groom {
@@ -53,6 +56,7 @@
 	top: 100px;
 	/*background-color: orange;*/
 	height: 50px;
+	border: 1px solid #444;
 }
 
 .PDFCard #PDFCard6 {
@@ -62,6 +66,7 @@
 	top: 100px;
 	/*background-color: purple;*/
 	height: 50px;
+	border: 1px solid #444;
 }
 
 .PDFCard #PDFCard7 {
@@ -71,6 +76,7 @@
 	top: 100px;
 	/*background-color: brown;*/
 	height: 50px;
+	border: 1px solid #444;
 }
 
 /* row 3 */
@@ -81,6 +87,7 @@
 	top: 150px;
 	/*background-color: pink;*/
 	height: 200px;
+	border: 1px solid #444;
 }
 
 .PDFCard #PDFCard9 {
@@ -90,6 +97,7 @@
 	top: 150px;
 	/*background-color: aqua;*/
 	height: 200px;
+	border: 1px solid #444;
 }
 
 /* row 4 */
@@ -100,6 +108,7 @@
 	top: 350px;
 	/*background-color: green;*/
 	height: 350px;
+	border: 1px solid #444;
 }
 
 .PDFCard #PDFCard11 {
@@ -109,4 +118,5 @@
 	top: 350px;
 	/*background-color: yellow;*/
 	height: 350px;
+	border: 1px solid #444;
 }
