--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -5,6 +5,7 @@
 	position: relative;
 	padding: 15px;
 	box-shadow: 0 3px 1px -2px rgba(0,0,0,.14),0 2px 2px 0 rgba(0,0,0,.098),0 1px 5px 0 rgba(0,0,0,.084);
+	border: 1px solid #444;
 }
 
 /* row 1 */
