--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -9,7 +9,7 @@
 }
 
 /* row 1 */
-.PDFCard #ticket-id {
+.PDFCard #PDFCard1 {
 	position: absolute;
 	width: calc(100% / 20 * 3);
 	left: 0;
@@ -19,7 +19,7 @@
 	border: 1px solid #444;
 }
 
-.PDFCard #title {
+.PDFCard #PDFCard2 {
 	position: absolute;
 	width: calc(100% / 20 * 14);
 	left: calc(100% / 20 * 3);
@@ -40,7 +40,7 @@
 }
 
 /* row 2 */
-.PDFCard #epic {
+.PDFCard #PDFCard4 {
 	position: absolute;
 	width: calc(100% / 20 * 11);
 	left: 0;
@@ -50,7 +50,7 @@
 	border: 1px solid #444;
 }
 
-.PDFCard #groom {
+.PDFCard #PDFCard5 {
 	position: absolute;
 	width: calc(100% / 20 * 2);
 	left: calc(100% / 20 * 11);
@@ -81,7 +81,7 @@
 }
 
 /* row 3 */
-.PDFCard #story {
+.PDFCard #PDFCard8 {
 	position: absolute;
 	width: calc(100% / 20 * 14);
 	left: 0;
