--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -1,3 +1,14 @@
+/* Position of data in card */
+#ticket-id {
+	top: 50%;
+	text-align: center;
+	font-size: 20px;
+}
+
+
+
+
+
 /* md card, PDFCard layout */
 .PDFCard {
 	width: 100%;
