--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -1,7 +1,10 @@
 /* Position of data in card */
 #ticket-id {
-	text-align: center;
-	vertical-align: middle;
+	position:absolute;
+    left:0;
+    right:0;
+    margin-left:auto;
+    margin-right:auto;
 	font-size: 20px;
 }
 
