--- a/css/PDFCardStyle.css
+++ b/css/PDFCardStyle.css
@@ -1,10 +1,8 @@
 /* Position of data in card */
 #ticket-id {
-	position:absolute;
-    left:0;
-    right:0;
-    margin-left:auto;
-    margin-right:auto;
+	position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
 	font-size: 20px;
 }
 
