--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ md-progress-circular .md-inner .md-right .md-half-circle {
 .sablonoLoader {
   margin: 200px auto 0;
   width: 20%;
-  position: relative;
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
