--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ md-progress-circular .md-inner .md-right .md-half-circle {
 }
 
 .sablonoLoader {
-  margin: 200px auto 0;
+  margin: 0 auto ;
 
 }
 
