--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,9 @@ md-progress-circular .md-inner .md-right .md-half-circle {
 }
 
 .sablonoLoader {
-  margin: 0 auto;
-  width: 50%;
-  height: 50%;
+  margin: 50% auto 0 auto;
+  width: 25%;
+  height: 25%;
 }
 
 
