--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ md-progress-circular .md-inner .md-right .md-half-circle {
   width: 20%;
 }
 
-button#btnNewStory, button#btnShowStory, button#btnNewSprint, button#btnStoryFontSize, button#btnNotesFontSize, button#btnDeleteNotes, button#btnAutoNumber {
+button#btnNewStory, button#btnShowStory, button#btnNewSprint {
   background-color: #FFD200;
   color: #616161;
   cursor: pointer;
@@ -86,6 +86,12 @@ button#btnNewStory, button#btnShowStory, button#btnNewSprint, button#btnStoryFon
 
 button#btnOpenPDF, button#btnSavePDF, button#btnPrintPDF, button#btnPrintPDFSprint, button#btnOpenPDFSprint, button#btnSavePDFSprint {
   background-color: #26BF59;
+  color: #FFF;
+  cursor: pointer;
+}
+
+button#btnStoryFontSize, button#btnNotesFontSize, button#btnDeleteNotes, button#btnAutoNumber {
+  background-color: #00B4C8;
   color: #FFF;
   cursor: pointer;
 }
