--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ button#btnStoryFontSize, button#btnNotesFontSize, button#btnDeleteNotes, button#
   display: none;
 }
 
-#storyNumber, #sprintNumber,  #storyFontSize, #notesFontSize, #priorityNumber {
+#storyNumber, #sprintNumber,  #storyFontSize, #notesFontSize, #priorityNumber, #sprintstoryFontSize, #sprintnotesFontSize {
   border: 0;
   background-color: #E0E0E0;
   color: #616161;
@@ -138,11 +138,7 @@ button#btnStoryFontSize, button#btnNotesFontSize, button#btnDeleteNotes, button#
 }
 
 /* checkbox */
-md-switch.md-checked .md-bar, md-switch.md-checked .md-thumb{
-  background-color: #26BF59;
-}
-
-#deleteNotesDone, #fontSizeAlert {
+#deleteNotesDone, #fontSizeAlert, #sprintdeleteNotesDone, #sprintfontSizeAlert {
   display: none;
 }
 
