--- a/css/style.css
+++ b/css/style.css
@@ -108,21 +108,21 @@ button#btnDeleteNotes, button#sprintbtnDeleteNotes {
   display: none;
 }
 
-#storyDiv {
+/*#storyDiv {
   position: absolute;
   top: 25px;
   left: 25px;
-}
+}*/
 
 #controls {
   margin-top: 25px;
 }
 
-#sprintDiv {
+/*#sprintDiv {
   position: absolute;
   left: 25px;
   top: 210px;
-}
+}*/
 
  #subdomain {
   display: none;
