--- a/css/style.css
+++ b/css/style.css
@@ -110,8 +110,22 @@ button#btnDeleteNotes, button#sprintbtnDeleteNotes {
 
 #step1Container {
   width: 50%;
-  background-color: transparent;
+  background-color: #E0E0E0;
 }
+
+md-tabs .md-tab.md-active, md-tabs .md-tab.md-focused {
+  color: #616161;
+}
+
+md-tabs md-ink-bar {
+  color: #00B4C8;
+  background: #00B4C8;
+}
+
+md-ripple-container {
+  background-color: #00B4C8 !important;
+}
+
 /*#storyDiv {
   position: absolute;
   top: 25px;
