--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ button#btnDeleteNotes, button#sprintbtnDeleteNotes {
   background-color: #E0E0E0;
 }
 
-md-tabs .md-tab.md-active, md-tabs .md-tab.md-focused {
+md-tabs .md-tab.md-active, md-tabs .md-tab.md-focused, md-content {
   color: #616161;
 }
 
