--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,12 @@ button#btnDeleteNotes, button#sprintbtnDeleteNotes {
   display: none;
 }
 
-#step1Container {
+#step1Container, md-content {
   width: 50%;
   background-color: #E0E0E0;
 }
 
-md-tabs .md-tab.md-active, md-tabs .md-tab.md-focused, md-content {
+md-tabs .md-tab.md-active, md-tabs .md-tab.md-focused {
   color: #616161;
 }
 
