--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ button#btnDeleteNotes, button#sprintbtnDeleteNotes {
 }
 
 #step1Container {
-  width: 50%;
+  width: 492px;
   background-color: #E0E0E0;
 }
 
