--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,10 @@ md-content {
   margin-top: 25px;
 }
 
+#controlsSprint {
+  margin-top: 25px;
+}
+
 /*#sprintDiv {
   position: absolute;
   left: 25px;
