--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,9 @@ button#btnDeleteNotes, button#sprintbtnDeleteNotes {
   top: 210px;
 }
 
- #subdomain {
+/* #subdomain {
   display: none;
-}
+}*/
 
 #storyNumber, #sprintNumber,  #storyFontSize, #notesFontSize, #priorityNumber, #sprintstoryFontSize, #sprintnotesFontSize {
   border: 0;
